# jinja2-toolbox

./: .gitignore  README.md  TODO.md  justfile  pyproject.toml  requirements.txt
examples/custom-extensions/: data.json  happysad_ext.py  run.sh  template.jinja2
examples/simple-json/: data.json  run.sh  template.jinja2
examples/simple-json-with-enrichment/: run.sh  template.jinja2
examples/simple-toml/: data.toml  run.sh
examples/simple-yaml/: data.yaml  run.sh  template.jinja2
jinja2-toolbox/: __main__.py  cli.py  data_proxies.py  json_provider.py  yaml_provider.py
jinja2_toolbox/: cli.py  data_proxies.py  toml_provider.py
tests/: test_basic.py  test_cli.py
