[project]
name = "jinja2-toolbox"
version = "0.0.1"
description = "A friendly CLI for rendering Jinja2 templates with JSON/YAML data, custom filters, and enrichment."
authors = [
    { name = "dhdhxji" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jinja2",
    "pyyaml"
]

[project.scripts]
jinja2-toolbox = "jinja2_toolbox.cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^6.3.0"
pyfakefs = "^5.9.3"

